- failed test pojects will be ignored while loading - added a second progress option -- shows in the status bar -- can be configured via "progressVsualization" -- added translations for the config property

--- a/i18n/deu/package.i18n.json
+++ b/i18n/deu/package.i18n.json
@@ -6,5 +6,6 @@
   "properties.banditTestExplorer.allowKillProcess": "Freigabe, dass laufende Test-Prozesse beim Abbruch hart beendet werden dürfen.",
   "properties.banditTestExplorer.logpanel": "Aktiviert die Ausgabe von Logmeldungen im integrierten Ausgabefenster.",
   "properties.banditTestExplorer.logfile": "Aktiviert die Ausgabe der Logmeldungen in der angegebenen Logdatei.",
-  "properties.banditTestExplorer.loglevel": "Das Loglevel zur Ausgabe von Logmeldungen. Alle Meldungen mit gleichem oder höherem Level werden ausgegeben."
+  "properties.banditTestExplorer.loglevel": "Das Loglevel zur Ausgabe von Logmeldungen. Alle Meldungen mit gleichem oder höherem Level werden ausgegeben.",
+  "properties.banditTestExplorer.progressVisualization": "Darstellungsform für die Fortschrittsanzeige. Mit `dialogBox` wird der Fortschritt über ein Dialog-Popup dargestellt, mit `statusBar` etwas dezenter über die Statusleite (Standard: dialogBox)."
 }
